--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -1,34 +1,32 @@
-body{
-     background: url(../img/background.jpg) repeat;  
-}
-header{
-   
-     margin:50px;
-     text-align:center;     
+
+
+.jumbotron {
+  background-image: url('../images/background.jpg');  
+   height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 
-h1,h2,h3,h4,h5,h6 {
+jumbotron.container{
+     position:relative;
+     top:100px;
+     
+     
+}
+.jumbotron h1,p {
+     color:white;
     text-align:center;
-    text-transform: uppercase;
     font-family: 'Noto Sans', sans-serif;
     font-weight: 700;
-    color:#8bb8c6;
+
 }
-
-
-hr {
-        text-align:center;
-     display: block;
-     height: 1px;
-    border: 0;
-    border-top: 1px solid #8bb8c6;
-    margin: 1em 8em 1em 6em;
-    padding: 0; }
 
 
 .link{
      font-family: 'Noto Sans', sans-serif;
      font-weight:700;
+     padding:20px 0 0 0;
 }
 a{
      text-decoration:none;
@@ -45,16 +43,16 @@ a:hover{
 .charity{
      display:table;
     text-align:center;
-   
     width: 100%;
     height: auto;
     margin:10px;
+    padding:20px 0 0 0;
 }
 
 
 img{
-     width:330px;
-     height:330px;
+     width:290px;
+     height:290px;
      
 }
 
@@ -67,10 +65,10 @@ ul.img-list {
  
 ul.img-list li {
   display: inline-block;
-  height: 330px;
+  height: 290px;
   margin: 0 3em 3em 0;
   position: relative;
-  width: 330px;
+  width: 290px;
 }
 
 
@@ -88,7 +86,7 @@ span.text-content {
   color: white;
   cursor: pointer;
   display: table;
-  height: 330px;
+  height: 290px;
   left: 0;
   position: absolute;
   top: 0;
@@ -106,11 +104,11 @@ span.text-content {
   color: white;
   cursor: pointer;
   display: table;
-  height: 330px;
+  height: 290px;
   left: 0;
   position: absolute;
   top: 0;
-  width: 330px;
+  width: 290px;
   opacity: 0;
 }
  
