--- a/public/stylesheets/girl.css
+++ b/public/stylesheets/girl.css
@@ -36,23 +36,27 @@ body {
 }
 
 .points{
-text-align: center;
-background: none;
-border: 4px solid #fff;
-border-radius:50%;
-color: #fff;
-width:250px;
-height:240px;
-vertical-align: middle;
+  text-align: center;
+  background: none;
+  border: 4px solid #fff;
+  border-radius:50%;
+  color: #fff;
+  width:250px;
+  height:240px;
+  vertical-align: middle;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  color:white;
+  font-family: 'Titillium Web', sans-serif;
+  font-size:2em;
+  padding-top: 30px;
 }
 
 p{
-color:white;
-font-family: 'Titillium Web', sans-serif;
-font-size:2em;
+  color:white;
+  font-family: 'Titillium Web', sans-serif;
+  font-size:2em;
 }
 
 .large{
@@ -63,25 +67,19 @@ font-size:3em;
 }
 
 .myButton {
-	-moz-box-shadow: 0px 10px 14px -7px #276873;
-	-webkit-box-shadow: 0px 10px 14px -7px #276873;
-	box-shadow: 0px 10px 14px -7px #276873;
-	background-color:#8bbac6;
-	-moz-border-radius:8px;
-	-webkit-border-radius:8px;
-	border-radius:8px;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:arial;
-	font-size:17px;
-	font-weight:bold;
-	padding:7px 32px;
-	text-decoration:none;
+  background: none;
+  padding: 10px 25px;
+  margin-right: 10px;
+  border: 1px solid white;
+  border-radius: 3px;
+  color:white;
 }
 .myButton:hover {
-	background-color:#408c99;
+  background:rgba(255,255,255,.8);
+  color:black;
+  transition: background 0.5s ease-out;
 }
+
 .myButton:active {
 	position:relative;
 	top:1px;
