--- a/views/impact.jade
+++ b/views/impact.jade
@@ -1,14 +1,15 @@
 doctype html(lang='en')
 head
-    title dc.js - Number Display Example
+    title Impact
     |     
     meta(charset='UTF-8')
     |     
     link(rel='stylesheet', type='text/css', href='stylesheets/dc.css')
   body
-    #chart-ring-year
-    #chart-hist-spend
-    #chart-row-spenders
+    .container
+      #chart-ring-year
+      #chart-hist-spend
+      #chart-row-spenders
     script(type='text/javascript', src='javascripts/d3.js')
     script(type='text/javascript', src='javascripts/crossfilter.js')
     script(type='text/javascript', src='javascripts/dc.js')
@@ -33,9 +34,6 @@ head
         {Charity: 'Paws4ever', Rewards: '50', Year: 2013},
         {Charity: 'Girl Develop It', Rewards: '30', Year: 2013}
     ];
-
-    // var donation = !{JSON.stringify(donations)};
-    alert(donation[0].date);
 
     // normalize/parse data
     spendData.forEach(function(d) {
