--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -1,27 +1,26 @@
 
 
-.jumbotron {
-  background-image: url('../images/background.jpg');  
-   height: 300px;
-  background-repeat: no-repeat;
-  background-size: cover;
-
+.banner {
+  background-image: url('../images/city.jpg');  
+  display: table;
+    width: 100%;
+    height: auto;
+    min-height: 700px;
+    text-align: center;
+    color: #fff;
+    -webkit-background-size: cover;
+    background-position: center center;
+    /*background-attachment: fixed;*/
+    background-size: cover;
+    -o-background-size: cover;
 }
 
-jumbotron.container{
-     position:relative;
-     top:100px;
-     
-     
-}
-.jumbotron h1,p {
-     color:white;
-    text-align:center;
-    font-family: 'Noto Sans', sans-serif;
-    font-weight: 700;
 
+.icon{
+ top:600px;
+ color:#fff;
+ font-size:3em;
 }
-
 
 .link{
      font-family: 'Noto Sans', sans-serif;
@@ -46,7 +45,7 @@ a:hover{
     width: 100%;
     height: auto;
     margin:10px;
-    padding:20px 0 0 0;
+    padding:40px 0 0 0;
 }
 
 
@@ -114,4 +113,17 @@ span.text-content {
  
 ul.img-list li:hover span.text-content {
   opacity: 1;
+}
+
+footer{
+  background-color: #000;
+  min-height:50px;
+  width:auto;
+}
+
+.footer{
+  padding:15px;
+  text-align: center;
+ font-family: 'Noto Sans', sans-serif;
+ color:#d4d4d4;
 }
